--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,76 @@ section {
 .container h4 {
     font-size: 15px;
 }
+
+
+/* Header */
+
+.header-container,
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    width: 970px;
+    margin: auto;
+}
+
+header {
+    width: 100%;
+    background-color: #222;
+    height: 75px;
+    padding: 20px;
+    position: fixed;
+    z-index: 300;
+}
+
+header #company-logo {
+    flex: 2;
+}
+
+header h1 a {
+    font-size: 25px;
+    font-weight: normal;
+    font-family: "Rock Salt", cursive;
+    color: #ddd;
+    line-height: 35px;
+    text-shadow: 1px 1px 3px #333;
+    /* x-axis y-axis blur color */
+}
+
+header .menu-wrapper {
+    flex: 2;
+    line: height 53px;
+    text-align: right;
+}
+
+header nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+
+/* Hero Image */
+
+#hero-image {
+    height: 100vh;
+    background: #000 url("../images/hero.jpg") no-repeat fixed bottom;
+    background-size: cover;
+    position: relative;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.tag-line {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 50px;
+    font-weight: older;
+    color: #ccc;
+    text-transform: uppercase;
+    opacity: 0.5;
+}
