menambahkan css dan javascript untuk memunculkan tombol topButton

--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,7 @@
 
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
@@ -15,7 +16,6 @@ html {
 
 body {
     min-height: 100vh;
-    scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
 }
@@ -73,7 +73,7 @@ textarea {
 input,
 textarea,
 button {
-    border: 1px solid gray;
+    border: 1px solid #ccc;
 }
 
 button {
