--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,159 @@ header nav ul li {
     text-transform: uppercase;
     opacity: 0.5;
 }
+
+
+/* Top Button */
+
+#topButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+#topButton:hover {
+    background-color: #555;
+}
+
+
+/* Our Story */
+
+#our-story {
+    padding: 25px 0;
+}
+
+#our-story p {
+    text-align: justify;
+}
+
+
+/* Gallery */
+
+#gallery {
+    background-color: #333;
+    color: #fff;
+    padding: 25px 0;
+    text-align: center;
+}
+
+.gallery-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    justify-content: space-evenly;
+}
+
+.gallery-item {
+    flex: 1;
+    flex-basis: 33%;
+}
+
+.gallery-description {
+    margin-bottom: 20px;
+}
+
+
+/* Events */
+
+#events {
+    background-color: #eeeeee;
+    padding: 25px 0;
+}
+
+#upcoming-events-table {
+    width: 100%;
+    border-spacing: 10px;
+    border-collapse: separate;
+    margin-bottom: 20px;
+}
+
+#upcoming-events-table th {
+    text-align: left;
+    font-weight: bolder;
+}
+
+
+/* Contacts */
+
+#contact {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+#contact fieldset {
+    width: 80%;
+    margin: auto auto;
+    background-color: #eee;
+    padding: 20px;
+    box-shadow: 0 0 4px #ccc;
+}
+
+#contact p {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#contact input,
+#contact textarea {
+    margin-bottom: 20px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#contact input {
+    height: 40px;
+}
+
+#contact textarea {
+    height: 200px;
+}
+
+#contact button {
+    width: 100%;
+    height: 40px;
+}
+
+#contact button:hover {
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+/* Footer */
+
+footer {
+    background-color: #222;
+    position: relative;
+    bottom: 0;
+    height: 100px;
+}
+
+footer .menu-wrapper {
+    flex: 1;
+    line-height: 35px;
+    text-align: left;
+}
+
+footer nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+    padding: 0 10px;
+    line-height: 100px;
+}
+
+footer #copyright {
+    color: #fff;
+    line-height: 100px;
+}
